More comments, type hints, subprocess for pip

--- a/setup.cfg
+++ b/setup.cfg
@@ -6,3 +6,8 @@ exclude = docs test/package/setup.py
 
 [tool:pytest]
 addopts = --ignore build/ --ignore dist/ test/
+
+[mypy]
+mypy_path = src/
+strict_optional = yes
+disallow_untyped_defs = no
