--- a/tox.ini
+++ b/tox.ini
@@ -2,5 +2,11 @@
 envlist = py36
 
 [testenv]
-commands=py.test
-deps = pytest
+commands=
+  py.test
+  mypy src/
+  flake8 src/ test/
+deps=
+  pytest
+  mypy
+  flake8
