--- a/tox.ini
+++ b/tox.ini
@@ -2,11 +2,14 @@
 envlist = py36
 
 [testenv]
+passenv = TRAVIS TRAVIS_*
 commands=
-  py.test
+  py.test --cov=shiv
   mypy src/
   flake8 src/ test/
 deps=
   pytest
+  pytest-cov
   mypy
   flake8
+  coveralls
