Fix coverage paths in coveralls and enable branch coverage

--- a/setup.cfg
+++ b/setup.cfg
@@ -12,6 +12,16 @@ exclude = docs test/package/setup.py
 [tool:pytest]
 addopts = --ignore build/ --ignore dist/ test/
 
+[coverage:run]
+source = shiv
+branch = True
+
+[coverage:paths]
+source =
+    src/shiv
+    .tox/*/lib/python*/site-packages/shiv
+    .tox/pypy*/site-packages/shiv
+
 [mypy]
 mypy_path = src/
 strict_optional = yes
