--- a/tox.ini
+++ b/tox.ini
@@ -4,7 +4,7 @@ envlist = py36
 [testenv]
 passenv = TRAVIS TRAVIS_*
 commands=
-  py.test --cov=shiv
+  py.test --cov --cov-config=setup.cfg
   mypy src/
   flake8 src/ test/
 deps=
