--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,4 +1,1 @@
-# DO NOT REMOVE - ADDED BY DISTGRADLE
-include *pinned.txt
-# DO NOT REMOVE - ADDED BY DISTGRADLE
-include product-spec.json
+include README.md
