Moving most setup.py logic into setup.cfg

--- a/setup.cfg
+++ b/setup.cfg
@@ -3,6 +3,10 @@ current_version = 0.0.48
 commit = True
 tag = True
 
+[bumpversion:file:setup.py]
+
+[bumpversion:file:src/shiv/cli.py]
+
 [flake8]
 max-line-length = 160
 max-complexity = 15
@@ -16,7 +20,44 @@ mypy_path = src/
 strict_optional = yes
 disallow_untyped_defs = no
 
-[bumpversion:file:setup.py]
+[metadata]
+name = shiv
+version = 0.0.48
+description = A command line utility for building fully self contained Python zipapps.
+long_description = file: README.md
+long_description_content_type = text/markdown
+url = https://github.com/linkedin/shiv
+author = Loren Carvalho
+author_email = loren@linkedin.com
+license = BSD License
+license_file = LICENSE
+classifiers =
+  License :: OSI Approved :: BSD License
+  Programming Language :: Python :: 3 :: Only
+  Programming Language :: Python :: 3
+  Programming Language :: Python :: 3.6
+  Programming Language :: Python :: 3.7
+  Programming Language :: Python :: 3.8
 
-[bumpversion:file:src/shiv/cli.py]
+[options]
+package_dir =
+  =src
+packages = find:
+install_requires =
+  click>=6.7,!=7.0
+  pip>=9.0.3
+  setuptools
+  importlib_resources; python_version < "3.7"
+python_requires = >=3.6
+include_package_data = True
 
+[options.packages.find]
+where=src
+
+[options.entry_points]
+console_scripts =
+  shiv = shiv.cli:main
+  shiv-info = shiv.info:main
+
+[bdist_wheel]
+universal = True
