Add the shivignore support

--- a/setup.cfg
+++ b/setup.cfg
@@ -37,6 +37,7 @@ packages = find:
 install_requires =
   click>=6.7,!=7.0
   pip>=9.0.3
+  pathspec>=0.5.9
   setuptools
   importlib_resources; python_version < "3.7"
 python_requires = >=3.6
