--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,19 +1,34 @@
 trigger:
 - master
 
-pool:
-  vmImage: 'ubuntu-latest'
 strategy:
   matrix:
-    py36:
+    linux36:
+      imageName: 'ubuntu-16.04'
       python.version: '3.6'
       tox.env: py36
-    py37:
+    linux37:
+      imageName: 'ubuntu-16.04'
+      python.version: '3.7'
+      tox.env: py37
+    mac36:
+      imageName: 'macos-10.13'
+      python.version: '3.6'
+      tox.env: py36
+    mac37:
+      imageName: 'macos-10.13'
+      python.version: '3.7'
+      tox.env: py37
+    windows36:
+      imageName: 'vs2017-win2016'
+      python.version: '3.6'
+      tox.env: py36
+    windows37:
+      imageName: 'vs2017-win2016'
       python.version: '3.7'
       tox.env: py37
 
 steps:
-
 - task: UsePythonVersion@0
   inputs:
     versionSpec: '$(python.version)'
