--- a/setup.cfg
+++ b/setup.cfg
@@ -11,6 +11,16 @@ mypy_path = src/
 strict_optional = yes
 disallow_untyped_defs = no
 
+[isort]
+line_length = 120
+indent='    '
+multi_line_output=3
+lines_between_types = 1
+include_trailing_comma = true
+use_parentheses = true
+not_skip = __init__.py
+sections = FUTURE,STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER
+
 [metadata]
 name = shiv
 version = 0.0.50
