--- a/tox.ini
+++ b/tox.ini
@@ -1,15 +1,19 @@
 [tox]
 envlist = py36, py37, py38
 
+[gh-actions]
+python =
+  3.6: py36
+  3.7: py37
+  3.8: py38
+
 [testenv]
-passenv = TRAVIS TRAVIS_*
 commands=
-  py.test --cov=shiv
+  coverage run -m pytest
   mypy src/
   flake8 src/ test/
 deps=
+  coverage
   pytest
-  pytest-cov
   mypy
   flake8
-  coveralls
