--- a/setup.cfg
+++ b/setup.cfg
@@ -2,6 +2,7 @@
 max-line-length = 120
 max-complexity = 15
 exclude = docs test/package/setup.py
+extend-ignore = C901
 
 [tool:pytest]
 addopts = --ignore build/ --ignore dist/ test/
