--- a/.github/workflows/tox.yml
+++ b/.github/workflows/tox.yml
@@ -9,10 +9,10 @@ jobs:
       max-parallel: 4
       matrix:
         platform: [ubuntu-latest, macos-latest, windows-latest]
-        python-version: [3.6, 3.7, 3.8]
+        python-version: [3.6, 3.7, 3.8, 3.9]
 
     steps:
-      - uses: actions/checkout@v1
+      - uses: actions/checkout@v2
 
       - name: set up python ${{ matrix.python-version }}
         uses: actions/setup-python@v2
