--- a/tox.ini
+++ b/tox.ini
@@ -1,6 +1,6 @@
 [tox]
 isolated_build = True
-envlist = py36, py37, py38, py39
+envlist = py36, py37, py38, py39, py310
 
 [gh-actions]
 python =
@@ -8,7 +8,7 @@ python =
   3.7: py37
   3.8: py38
   3.9: py39
-  '3.10': py310
+  3.10: py310
 
 [testenv]
 commands=
