--- a/tox.ini
+++ b/tox.ini
@@ -1,14 +1,13 @@
 [tox]
 isolated_build = True
-envlist = py36, py37, py38, py39, py310
+envlist = py38, py39, py310, py311
 
 [gh-actions]
 python =
-  3.6: py36
-  3.7: py37
   3.8: py38
   3.9: py39
   3.10: py310
+  3.11: py310
 
 [testenv]
 commands=
