--- a/setup.cfg
+++ b/setup.cfg
@@ -59,8 +59,8 @@ where=src
 
 [options.entry_points]
 console_scripts =
-  shiv = shiv.cli:main
-  shiv-info = shiv.info:main
+  shiv = shiv.commands:shiv
+  shiv-info = shiv.commands:shiv_info
 
 [bdist_wheel]
 universal = True
