--- a/setup.cfg
+++ b/setup.cfg
@@ -24,7 +24,7 @@ sections = FUTURE,STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER
 
 [metadata]
 name = shiv
-version = 1.0.4
+version = attr: shiv.__version__
 description = A command line utility for building fully self contained Python zipapps.
 long_description = file: README.md
 long_description_content_type = text/markdown
