Use the extra_requirements feature as intended.

--- a/setup.cfg
+++ b/setup.cfg
@@ -54,6 +54,10 @@ install_requires =
 python_requires = >=3.6
 include_package_data = True
 
+[options.extras_require]
+rtd =
+  sphinx-click
+
 [options.packages.find]
 where=src
 
