--- a/.readthedocs.yml
+++ b/.readthedocs.yml
@@ -1,6 +1,11 @@
 build:
-    image: latest
+  os: ubuntu-22.04
+  tools:
+    python: "3.11"
 
 python:
-    version: 3.6
-    pip_install: true
+  install:
+    - method: pip
+      path: .
+      extra_requirements:
+        - rtd
