Adding packaging and python version check

--- a/setup.cfg
+++ b/setup.cfg
@@ -50,6 +50,7 @@ install_requires =
   click>=6.7,!=7.0
   pip>=9.0.3
   setuptools
+  packaging
 python_requires = >=3.8
 include_package_data = True
 
